--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,25 @@
-boto3>=1.34.0,<1.35.0
-botocore>=1.34.0,<1.35.0
-docker>=7.0.0,<8.0.0
-GitPython>=3.1.40,<3.2.0
-streamlit>=1.37.0,<1.38.0
-langchain>=0.2.17,<0.3.0
-langchain-aws>=0.1.16,<0.2.0
-langchain-community>=0.2.19,<0.3.0
-langchain-core>=0.2.43,<0.3.0
-langchain-text-splitters>=0.2.2,<0.3.0
-langchainhub>=0.1.20,<0.2.0
-langsmith>=0.1.112,<0.2.0
-pandas>=2.2.0,<2.3.0
-numpy>=1.26.0,<1.27.0
-pydantic>=2.8.0,<2.9.0
-PyYAML>=6.0.0,<6.1.0
-requests>=2.32.0,<2.33.0
-Jinja2>=3.1.6,<3.2.0
-toml>=0.10.2,<0.11.0
-aiohttp>=3.10.0,<3.11.0
-yarl>=1.12.0,<2.0.0
-s3transfer>=0.10.0,<0.11.0
-altair>=5.3.0,<5.4.0
-pillow>=10.4.0,<10.5.0
-typing_extensions>=4.12.0,<4.13.0
-types-requests>=2.32.0,<2.33.0
+boto3==1.34.162
+botocore==1.34.162
+GitPython==3.1.43
+streamlit==1.37.1
+langchain==0.2.17
+langchain-aws==0.1.17
+langchain-community==0.2.19
+langchain-core==0.2.43
+langchain-text-splitters==0.2.4
+langchainhub==0.1.21
+langsmith==0.1.129
+pandas==2.2.2
+numpy==1.26.4
+pydantic==2.8.2
+PyYAML==6.0.2
+requests==2.32.3
+Jinja2==3.1.4
+toml==0.10.2
+aiohttp==3.12.14
+yarl==1.20.1
+s3transfer==0.10.2
+altair==5.3.0
+pillow==10.4.0
+typing_extensions==4.12.2
+types-requests==2.32.0.20240914
